--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "firebase": "^7.1.0",
     "materialize-css": "^1.0.0-rc.2",
+    "slugify": "^1.3.5",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
