--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-firebase-project",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "",
+  "author": "AlenaNik <alena.nik.digital@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,9 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "firebase": "^7.1.0",
-    "materialize-css": "^1.0.0-rc.2",
-    "slugify": "^1.3.5",
+    "firebase": "^7.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
